Sort movies in memory